# BachelorsThesis

./: BA_outline.txt  README.md  configuration_luisa.txt  liboverride.c  notepad.txt  print.c  test_malloc
backup_gpu/basic_coroutine_example/: CMakeLists.txt  main.cpp  stb_image_write.h
backup_gpu/coroutine-mul-bench/: matrix_multiplication
backup_gpu/matrix-mul-bench/: matrix_multiplication
backup_gpu/resnet_profiling/: resnet_profile.nsys-rep  resnet_profile.py
coroutine-mul-bench/src/: gpu_matmul.cu
eval/eval/large_mem_small_exec/non_persistent/: profile_report_non_persistent.nsys-rep
eval/eval/large_mem_small_exec/non_persistent/matrix-mul-bench/: matrix_multiplication  results.txt
eval/eval/large_mem_small_exec/non_persistent/matrix-mul-bench/src/: gpu_matmul.cu  main.cpp
eval/eval/non_persistent/matrix-mul-bench/: matrix_multiplication
eval/eval/non_persistent/matrix-mul-bench/src/: main.cpp
eval/eval/small_mem_small_exec/non_persistent/matrix-mul-bench/: evaluation.sh  matrix_multiplication
eval/eval/small_mem_small_exec/non_persistent/matrix-mul-bench/include/: gpu_matmul.h
eval/non_persistent/matrix-mul-bench/: matrix_multiplication
eval/non_persistent/matrix-mul-bench/src/: gpu_matmul.cu
eval/nsys_evals/: persistent_1MB_50000.nsys-rep  profile_report.nsys-rep  profile_report_non_persistent.nsys-rep
thesis/tum-thesis-latex/: .latexmkrc  2  :qw  :w  Makefile  \  bibliography.bib  exam  main.bcf-SAVE-ERROR  main.tex  save.txt  settings.tex  watch-latex.sh
thesis/tum-thesis-latex/chapters/: 01_introduction.tex  01a_objectives.tex  02_background.tex  02_research_questions.tex  03_objectives.tex  03_related_work.tex  04_coroutines.tex  04_literature_review.tex  05_a_Architecture.tex  05_persistent_threads.tex  05_proposed_approach.tex  06_evaluation.tex
thesis/tum-thesis-latex/figures/: architecture.tex  comparematrix.tex  cpuvgpu.tex  eval_bm_sk.tex  eval_sm_sk.tex  lockstep_exec.tex  mem_buffer.tex  singlethreadedcomp.tex  taskqueue.tex
thesis/tum-thesis-latex/pages/: abstract.tex  acknowledgments.tex
(+2 files in other folders)
